--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <!-- Project 1 -->
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span class="date-range">abr 2016 —  nov 2021</span>
+                        <span class="date-range">2016 — 2021</span>
                     </div>
                     <div class="timeline-content">
                         <div class="project-header">
@@ -102,7 +102,7 @@
                 <!-- Project 2 -->
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span class="date-range">mar 2020 — sep 2021</span>
+                        <span class="date-range">2020 — 2021</span>
                     </div>
                     <div class="timeline-content">
                         <div class="project-header">
@@ -136,7 +136,7 @@
                 <!-- Project 3 -->
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span class="date-range">2022 — 2023</span>
+                        <span class="date-range">2021 — 2022</span>
                     </div>
                     <div class="timeline-content">
                         <div class="project-header">
@@ -206,7 +206,7 @@
                 <!-- Project 5 -->
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span class="date-range">2024</span>
+                        <span class="date-range">2023 - 2024</span>
                     </div>
                     <div class="timeline-content">
                         <div class="project-header">
@@ -243,7 +243,7 @@
                 <!-- Project 6 -->
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span class="date-range">2024</span>
+                        <span class="date-range">2023 - 2024</span>
                     </div>
                     <div class="timeline-content">
                         <div class="project-header">
@@ -280,7 +280,7 @@
                 <!-- Project 7 -->
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span class="date-range">2023</span>
+                        <span class="date-range">2023 - 2024</span>
                     </div>
                     <div class="timeline-content">
                         <div class="project-header">
@@ -317,7 +317,7 @@
                 <!-- Project 8 -->
                 <div class="timeline-item">
                     <div class="timeline-date">
-                        <span class="date-range">2024</span>
+                        <span class="date-range">2025</span>
                     </div>
                     <div class="timeline-content">
                         <div class="project-header">
@@ -347,6 +347,43 @@
                             <li>Socket.io</li>
                             <li>Real-time Chat</li>
                             <li>Google Play</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Project 9 -->
+                <div class="timeline-item">
+                    <div class="timeline-date">
+                        <span class="date-range">2023 — 2024</span>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="project-header">
+                            <h3 class="project-title">Schedule Interpreter - Migración Legacy</h3>
+                            <div class="project-links">
+                                <a href="https://github.com/androetto" target="_blank" aria-label="Ver código en GitHub">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                                    </svg>
+                                </a>
+                                <a href="https://www.scheduleinterpreter.com/" target="_blank" aria-label="Ver sitio web">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M18.364 5.636l-3.536 3.536c-.781.781-2.047.781-2.828 0-.781-.781-.781-2.047 0-2.828l3.536-3.536c.781-.781 2.047-.781 2.828 0 .781.781.781 2.047 0 2.828zm-12.728 12.728l3.536-3.536c.781-.781 2.047-.781 2.828 0 .781.781.781 2.047 0 2.828l-3.536 3.536c-.781.781-2.047.781-2.828 0-.781-.781-.781-2.047 0-2.828z"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <p class="project-description">
+                            Lideré la migración completa de una plataforma empresarial legacy de servicios de interpretación desde Perl hacia una arquitectura moderna con JavaScript vanilla y Express. ScheduleInterpreter es una plataforma escalable utilizada por empresas para gestionar servicios de interpretación remota, con planes desde $245/mes hasta $995/mes para nivel Enterprise. La plataforma incluye programación inteligente de citas, comunicación en tiempo real, contabilidad automatizada, cumplimiento normativo, gestión integral de proveedores y cuentas, e integración con servicios en la nube líderes del mercado. Desarrollé el potente Flow API que permite a las empresas construir aplicaciones innovadoras, integrarse seamlessly con otras plataformas, y desbloquear capacidades avanzadas de minería de datos y analytics. La solución conecta intérpretes remotos para consultas médicas, reuniones de oficina, audiencias judiciales, conferencias escolares y reuniones abogado-cliente. Esta migración mejoró significativamente el rendimiento, escalabilidad y mantenibilidad del sistema, transformando una aplicación legacy en una plataforma moderna que sirve a miles de usuarios empresariales.
+                        </p>
+                        <ul class="project-tech">
+                            <li>JavaScript</li>
+                            <li>Express.js</li>
+                            <li>MySQL</li>
+                            <li>Node.js</li>
+                            <li>Legacy Migration</li>
+                            <li>API Development</li>
+                            <li>Enterprise Software</li>
+                            <li>Perl to JS</li>
                         </ul>
                     </div>
                 </div>
